--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+    <title>Mi pagina ICO</title>
+</head> <!--Atributos-->
+<body>   <!--Todo lo que visualizara el usuario-->
+    <a href="Titulo1.html">Presiona para ir al titulo 1 </a>
     <h1>Titulo 1</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur quia debitis modi, a eius ex sit aspernatur, fuga, iusto culpa voluptates? Laborum quis ipsum maiores ad illo odit blanditiis molestias?</p>
     <h2>Titulo 2</h2>
