--- a/index.html
+++ b/index.html
@@ -1,44 +1,53 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<! DOCTYPE html>
+<html lang="es">
+<cabeza>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Mi pagina ICO</title>
-</head> <!--Atributos-->
-<body>   <!--Todo lo que visualizara el usuario-->
-    <a href="Titulo1.html">Presiona para ir al titulo 1 </a>
+</Cabeza> <!--Atributos-->
+<body> <!--Todo lo que visualizara el usuario-->
+    <section> <!--Cotenido en java-->
     <h1>Titulo 1</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur quia debitis modi, a eius ex sit aspernatur, fuga, iusto culpa voluptates? Laborum quis ipsum maiores ad illo odit blanditiis molestias?</p>
+    <a href="Titulo1.html">Presiona para ir al titulo 1 </a >
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur quia debitis modi, a eius ex sit aspernatur, fuga, iusto culpa voluptates? Laborum quis ipsum maiores ad illo odit blanditiis molestias? </p>
+    </section>
+    <section> <!--Contenido en phyton-->
     <h2>Titulo 2</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi veniam natus commodi at porro amet voluptatibus corporis assumenda iste! Omnis aut at, repellendus soluta exercitationem sit accusantium doloribus laudantium maxime.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi repudiandae et iusto sequi hic odio harum, porro quidem natus architecto doloribus, aut autem consequatur aliquid, veritatis expedita molestiae incidunt fuga.</p>
+    <a href="Titulo2.html">Presiona para ir al titulo 2 </a >
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi veniam natus commodi at porro amet voluptatibus corporis assumenda iste! Omnis aut at, repellendus soluta exercitationem sit accusantium doloribus laudantium maxime. </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi repudiandae et iusto sequi hic odio harum, porro quidem natus architecto doloribus, aut autem consequatur aliquid, veritatis expedita molestiae incidunt fuga. </p>
+    </section>
+    <section> <!--Contenido en C-->
     <h3>Titulo 3</h3>
+    <a href="Titulo3.html">Presiona para ir al titulo 3 </a >
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum tempora sequi quaerat praesentium dolore aspernatur error et totam dolorem nesciunt voluptatibus, similique expedita earum excepturi voluptas ex repellendus a voluptate.
-        <hr>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores ducimus aliquid iure fugiat totam magnam qui, similique eius cupiditate facere quos commodi dicta nulla dolore sequi voluptate sint, laudantium eum.</p>
-    </p>
+        <Hr>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores ducimus aliquid iure fugiat totam magnam qui, similique eius cupiditate facere quos commodi dicta nulla dolore sequi voluptate sint, laudantium eum. </p>
+    </section>
+    <section> <!--Contenido Formatos de texto-->
     <h2>Formatos de texto</h2>
-    <hr>
+    <Hr>
     <b>Texto en negritas</b>
-    <hr>
+    <Hr>
     <i>Texto en cursiva</i>
-    <hr>
+    <Hr>
     <s>Texto tachado</s>
-    <hr>
+    <Hr>
     <small>Texto pequeño</small>
-    <hr>
+    <Hr>
     <Marquee>Texto que se mueve</Marquee>
-    <hr>
+    <Hr>
     <mark>Texto marcado</mark>
-    <hr>
+    <Hr>
     <sub>Texto subindice</sub>
-    <hr>
+    <Hr>
     <sup>Texto superior indice</sup>
-    <hr>
+    <Hr>
     <h5>Titulo 5</h5>
     <h6>Titulo 6</h6>
 
     <p>Hola mundo</p>
-</body>
-</html>
+    </section>
+</cuerpo>
+</.html>
