--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 <body> <!--Todo lo que visualizara el usuario-->
     <section> <!--Cotenido en java-->
     <h1>Titulo 1</h1>
-    <a href="Titulo1.html"> <i>Presiona para ir al titulo 1</i> </a >
+    <a href="Titulo1.html" style="color:aqua"> <i>Mi nombre</i></a > 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur quia debitis modi, a eius ex sit aspernatur, fuga, iusto culpa voluptates? Laborum quis ipsum maiores ad illo odit blanditiis molestias? </p>
     </section>
     <section> <!--Contenido en phyton-->
     <h2>Titulo 2</h2>
-    <a href="Titulo2.html"> <i>Presiona para ir al titulo 2</i> </a >
+    <a href="Titulo2.html"style="color:aqua"> <i>Mi numero de cuenta</i> </a >
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi veniam natus commodi at porro amet voluptatibus corporis assumenda iste! Omnis aut at, repellendus soluta exercitationem sit accusantium doloribus laudantium maxime. </p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi repudiandae et iusto sequi hic odio harum, porro quidem natus architecto doloribus, aut autem consequatur aliquid, veritatis expedita molestiae incidunt fuga. </p>
     </section>
     <section> <!--Contenido en C-->
     <h3>Titulo 3</h3>
-    <a href="Titulo3.html"> <i> Presiona para ir al titulo 3</i> </a >
+    <a href="Titulo3.html"style="color:aqua"> <i>Mi carrera</i> </a >
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum tempora sequi quaerat praesentium dolore aspernatur error et totam dolorem nesciunt voluptatibus, similique expedita earum excepturi voluptas ex repellendus a voluptate.
         <Hr>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores ducimus aliquid iure fugiat totam magnam qui, similique eius cupiditate facere quos commodi dicta nulla dolore sequi voluptate sint, laudantium eum. </p>
