--- a/index.html
+++ b/index.html
@@ -26,28 +26,12 @@
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores ducimus aliquid iure fugiat totam magnam qui, similique eius cupiditate facere quos commodi dicta nulla dolore sequi voluptate sint, laudantium eum. </p>
     </section>
     <section> <!--Contenido Formatos de texto-->
-    <h2>Formatos de texto</h2>
-    <Hr>
-    <b>Texto en negritas</b>
-    <Hr>
-    <i>Texto en cursiva</i>
-    <Hr>
-    <s>Texto tachado</s>
-    <Hr>
-    <small>Texto pequeño</small>
-    <Hr>
-    <Marquee>Texto que se mueve</Marquee>
-    <Hr>
-    <mark>Texto marcado</mark>
-    <Hr>
-    <sub>Texto subindice</sub>
-    <Hr>
-    <sup>Texto superior indice</sup>
-    <Hr>
+    <h4>Tipo de texto</h4>
+    <a href="formatos.html"style="color:rgb(255, 0, 144)"> <i>Formatos de texto</i></a>
     <h5>Titulo 5</h5>
     <h6>Titulo 6</h6>
 
     <p>Hola mundo</p>
     </section>
 </cuerpo>
-</.html>
+</html>
