--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </section>
     <section> <!--Contenido Formatos de texto-->
     <h4>Tipo de texto</h4>
-    <a href="formatos.html"style="color:rgb(255, 0, 144)"> <i>Formatos de texto</i></a>
+    <a href="formatosTxt.html"style="color:rgb(255, 0, 144)"> <i>Formatos de texto</i></a>
     <h5>Titulo 5</h5>
     <h6>Titulo 6</h6>
 
