--- a/formatosTxt.html
+++ b/formatosTxt.html
@@ -3,10 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formatos de texto</title>
+    <meta name="viewport" content="width=, initial-scale=1.0">
+    <title>formatosTxt</title>
 </head>
 <body>
+    <section><!--Contenido Formatos de Texto-->
+        <b>Texto en negritas</b>
+        <Hr>
+        <i>Texto en cursiva</i>
+        <Hr>
+        <s>Texto tachado</s>
+        <Hr>
+        <small>Texto pequeño</small>
+        <Hr>
+        <Marquee>Texto que se mueve</Marquee>
+        <Hr>
+        <mark>Texto marcado</mark>
+        <Hr>
+        <sub>Texto subindice</sub>
+        <Hr>
+        <sup>Texto superior indice</sup>
+        <Hr>
+        <h5>Titulo 5</h5>
+        <h6>Titulo 6</h6>
     
+        <p>Hola mundo</p>
 </body>
 </html>
