--- a/formatosTxt.html
+++ b/formatosTxt.html
@@ -28,5 +28,8 @@
         <h6>Titulo 6</h6>
     
         <p>Hola mundo</p>
+        <sección>
+        <a href="index.html"> <p> Ir al menu</p> </a >
+         </sección>
 </body>
 </html>
