--- a/formulario.html
+++ b/formulario.html
@@ -6,21 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario</title>
 </head>
-<body>
+<body style="background-color: aqua;"><!--Poner color de fondo de la pagina-->
     <form action="" method="post"></form> <!--dentro de accion ira el programa o archivp que se encargara de hacer funcionar el formulario-->
-    <ul> <!--crear Lista desordenada-->
+    <ul style="color: blue;"> <!--crear Lista desordenada--> <!--Style darle color a todo lo listado-->
         <li>Edgar</li> <!--listar/li*#-->
         <li>Brenda</li>
         <li>Jordanna</li>
         <li>Kenji</li>
         <li>Joffre</li>
         </ul>
-        <br> <!--Salto o espacio-->
+        <br> <!--Salto de linea-->
+        <h1 style="color: yellow;">Titulo 1</h1>
         <ul type="square"> <!--Tipo de como quieres que sea listada tu lisa, viñetas cuadradas, ´puntos , imagenes etc.-->
         <li>Alvarez</li>
         <li>Hernandez</li>
         <li>Kuri</li>
-    </ul>
+        </ul>
     <hr><!--Linea separadora-->
     <ol><!--Crear lista ordenada, ordenandonos por numeros letras etc.-->
         <li>Edgar</li>
@@ -35,5 +36,13 @@
         <li>Hernandez</li>
         <li>Kuri</li>
         </ol>
+        <pre> <!--Muestra el texto tal cual y como esta en el codigo-->
+          <center>  
+                    Hola
+                           sean 
+                                Bienvenidos
+          </center>  
+                
+        </pre>
 </body>
 </html>
