--- a/Pagina.html
+++ b/Pagina.html
@@ -36,8 +36,8 @@
     </li>
 
     <li class="button">
-        <button type="submit">Enviar registro</button>
-
+    <button type="submit"> <a href="completado.html" style="color: black;"> Enviar Registro</a></button>
+    
     </li>
 
     </ul>
