--- a/Pagina.html
+++ b/Pagina.html
@@ -36,7 +36,7 @@
     </li>
 
     <li class="button">
-    <button type="submit"> <a href="completado.html" style="color: black;"> Enviar Registro</a></button>
+    <button type="submit"> <a href="completado.html" style="color: black; text-decoration: none;"> Enviar Registro</a></button>
     
     </li>
 
