--- a/Tablas de estilos/index2.html
+++ b/Tablas de estilos/index2.html
@@ -8,34 +8,34 @@
     <link rel="stylesheet" href="estillosindex2.css">
 </head>
 <body>
-    <!--b se usa para dar referencia al parafo -->
+    <!--b se usa negritas al texto del parafo -->
     <p class="parraforojo"><b>Rojo</b>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias vero, perspiciatis deserunt sequi veniam incidunt optio placeat consectetur, eos impedit quas a fuga, expedita aut deleniti odio eaque repellat debitis.</p>
-    <br>
+    <br> <!--Se manda a llamar la clase parrafo creada en estilos -->
     <p class="parrafoazul"><b>Azul</b>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod deserunt ratione nisi? Reiciendis ullam distinctio fugit quisquam similique aperiam tempora harum asperiores nulla corporis! Minima id vero consequuntur quis est?</p>
-    <br>
+    <br> <!--Se declara el parrafo y se manda a llamar la clase para que se respete todo lo que se hizo en estilos-->
     <p class="parrafopastel"><b>Pastel</b>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro perferendis culpa quod dolorem alias nisi enim ipsam exercitationem dolore reiciendis saepe hic, atque nemo amet quibusdam veniam, deserunt nostrum doloremque!</p>
 
     <p class="parrafoSec1">hola un parrafo</p>
 
-    <section class="sectionPrimaria">
-        <h1>Seccion primaria</h1>
+    <section class="sectionPrimaria"> <!--Se manda a llamar la clase sectionPrimaria creada en estilos -->
+        <h1>Seccion primaria</h1> 
 
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam ratione aliquam, dolores repudiandae
             necessitatibus iure eaque ipsum alias commodi? Quaerat quo debitis necessitatibus, nulla corporis rem
             aliquam! Molestiae, a dignissimos.</p>
         <p class="parrafoSec1" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, veritatis provident distinctio ipsam in
             excepturi placeat. Pariatur hic quod id dolor omnis, expedita, quas temporibus quos recusandae quisquam,
-            animi placeat?</p>
+            animi placeat?</p> <!--se manda a llmar clase parrafoSec1 creada en estilos-->
     </section>
 
 </section>
 
-<section class="sectionSecundaria">
+<section class="sectionSecundaria"> <!--SE declara una seccion y se manda a llamar la clase para que sea respetado el estilo-->
     <h2>Mi seccion 2</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi inventore nam iusto nesciunt, tempore neque,
         at, impedit consequatur fuga odio molestiae earum sequi vitae. Nesciunt eaque ab ducimus maiores provident?
     </p>
-    <hr>
+    <hr> <!--Linea divisora-->
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et animi sapiente quo dolor alias illo ducimus
         nulla dicta assumenda debitis tempora sunt perferendis deserunt quas ea, asperiores in illum maiores? Lorem
         ipsum dolor sit amet, consectetur adipisicing elit. Enim corporis porro reiciendis facilis tenetur
