--- a/Pagina tablas/index3.html
+++ b/Pagina tablas/index3.html
@@ -16,16 +16,16 @@
  <tr> <!--Crea fila en la tabla-->
     <td><!--Escribir dentro de la fila, meterle contenido en estecaso escribir una lista desordenada en la fila-->
         <ul><!--Lista desordenada-->
-            <li style="list-style-image: url(Recursos/Media/github1.png);"> <a href="https://github.com/Joffre03/JoffreWeb2508">Git hub </a></li> <!--Listado pero esta vez con imagen y con referencia para que se vuelva link pero solo el texto que acompaña a la imagen-->
-            <li style="list-style-image: url(Recursos/Media/Facebook1.png);">Facebook</li>
-            <li style="list-style-image: url(Recursos/Media/fesaragon1.jpg);">Donde estudio</li>
-            <li style="list-style-image: url(Recursos/Media/crypto1.jpg);">Criptomonedas</li>
+            <li style="list-style-image: url(Recursos/Media/github1.png);"> <a href="https://github.com/Joffre03/JoffreWeb2508" style="color: black; text-decoration: none;" >Git hub <style></style></a></li> <!--Listado pero esta vez con imagen y con referencia para que se vuelva link pero solo el texto que acompaña a la imagen-->
+           <a href="https://es-la.facebook.com/" style="color: black; text-decoration: none;"> <li style="list-style-image: url(Recursos/Media/Facebook1.png);">Facebook</li>
+           <a href="https://www.aragon.unam.mx/fes-aragon/#!/oferta-academica/licenciaturas/computacion" style="color: black; text-decoration: none;"> <li style="list-style-image: url(Recursos/Media/fesaragon1.jpg);">Donde estudio</li>
+            <a href="https://www.binance.com/es-MX" style="color: black; text-decoration: none;"> <li style="list-style-image: url(Recursos/Media/crypto1.jpg);">Criptomonedas</li></a> <!--Poner primero la referencia para que no solo el texto sea link si no tambien la imagen todo el campo completo-->
         </ul>
     </td>
 
     <td>
-        <h1>Bienvenidos</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis, quaerat nisi ipsum maxime at, velit est, quis unde aperiam magni molestias doloremque similique. Earum commodi veniam delectus dolore? Minus, voluptate?</p>
+        <h1><center>Bienvenidos</center></h1>
+        <p style="text-align: justify;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis, quaerat nisi ipsum maxime at, velit est, quis unde aperiam magni molestias doloremque similique. Earum commodi veniam delectus dolore? Minus, voluptate?</p>
     </td>
  </tr>
  </table>
