--- a/Pagina tablas/index3.html
+++ b/Pagina tablas/index3.html
@@ -14,7 +14,7 @@
         <tr> <!--Crear una fila en la tabla-->
 <th><img src="Recursos/media/45años.png" alt="45 años de la unam" style="width: 90px;"></th> <!--poniendo una imagen de encabezado-->
 
-<th class="margenes">Mi pagina HTML</th> <!--Creacion de encabezados-->
+<th class="titulo">Mi pagina HTML</th> <!--Creacion de encabezados-->
  </tr>
  <tr> <!--Crea fila en la tabla-->
     <td><!--Escribir dentro de la fila, meterle contenido en estecaso escribir una lista desordenada en la fila-->
@@ -27,22 +27,23 @@
     </td>
 
     <td> <!--Crear columna en la fila y escribir en ella-->
-        <h1><center>Bienvenidos</center></h1><!--Titulo centrado-->
+        <h1 class="subtitulo">Bienvenidos</h1><!--Titulo centrado-->
         <p style="text-align: justify;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis, quaerat nisi ipsum maxime at, velit est, quis unde aperiam magni molestias doloremque similique. Earum commodi veniam delectus dolore? Minus, voluptate?</p>
     </td>
  </tr>
- <tr> <!--Creando una nueva fila-->
-    <td><!--creando contenido dentro de la columna de la fila-->
+<!-- <tr> /Creando una nueva fila/
+    <td>/<creando contenido dentro de la columna de la fila/
     <ul>
         <h1>Hola</h1>
-        <li type="none"><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi debitis quisquam maiores ducimus accusantium rem praesentium beatae perferendis incidunt sunt, quis dolores doloribus perspiciatis architecto cupiditate mollitia expedita soluta laborum?</p></li> <!--Quitando el punto de listado y que se liste sin nada-->
+        <li type="none"><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi debitis quisquam maiores ducimus accusantium rem praesentium beatae perferendis incidunt sunt, quis dolores doloribus perspiciatis architecto cupiditate mollitia expedita soluta laborum?</p></li> /Quitando el punto de listado y que se liste sin nada/
     </ul>
     </td>
- </tr> <!--Fin de la segunda fila-->
+ </tr> /Fin de la segunda fila/
+-->
  </table>
  
-<div class="textoFooter">HOLA</div> <!--se manda a llmar a la clase textoFooter creada en estilos-->
-<p class="parrafoFooter">FES ARAGON</p> <!--se manda a llamar a la clase de parrafo creada en estilos para que se edite como de asigno-->
+<div class="textoFooter">FES ARAGON</div> <!--se manda a llmar a la clase textoFooter creada en estilos-->
+<p class="parrafoFooter">HOLA</p> <!--se manda a llamar a la clase de parrafo creada en estilos para que se edite como de asigno-->
 
 </div>
 
