--- a/Pagina tablas/index3.html
+++ b/Pagina tablas/index3.html
@@ -12,7 +12,7 @@
     <div class="bordeblanco fondoblaco"><!--Engolba distitos elemntos y le podemos dar atributos de manera general a todo, se manda a llamar la clase fondo blanco y borde blanco-->
     <table><!--Crear tabla-->
         <tr> <!--Crear una fila en la tabla-->
-<th><img src="Recursos/media/45anios.png" alt="45 años de la unam" style="width: 90px;"></th> <!--poniendo una imagen de encabezado-->
+<th><img src="Recursos/Media/45anios.png" alt="45 años de la unam" style="width: 90px;"></th> <!--poniendo una imagen de encabezado-->
 
 <th class="margenes">Mi pagina HTML</th> <!--Creacion de encabezados-->
  </tr>
